@@ -35,13 +35,15 @@ global $config;
 
 switch ($config["dbtype"]) {
 	case "mysql":
-		$timestamp = db_get_value_sql("SELECT UNIX_TIMESTAMP();");
+		$timestamp = db_process_sql("SELECT UNIX_TIMESTAMP();");
+		$timestamp = $timestamp[0]['UNIX_TIMESTAMP()'];		
 		break;
 	case "postgresql":
 		$timestamp = db_get_value_sql("SELECT ceil(date_part('epoch', CURRENT_TIMESTAMP));");
 		break;
 	case "oracle":
-		$timestamp = db_get_value_sql("SELECT ceil((sysdate - to_date('19700101000000','YYYYMMDDHH24MISS')) * (86400)) as dt FROM dual");
+		$timestamp = db_process_sql("SELECT ceil((sysdate - to_date('19700101000000','YYYYMMDDHH24MISS')) * (86400)) as dt FROM dual");
+		$timestamp = $timestamp[0]['dt'];
 		break;
 }
 ui_print_timestamp ($timestamp, false, $option);
